trying to fix align

--- a/styles.css
+++ b/styles.css
@@ -30,4 +30,5 @@ img {
     position:absolute;
     top:10px;
     left:10px;
+    z-index:1;
 }
